[gd_scene load_steps=2 format=3 uid="uid://cuantmlbgy078"]

[ext_resource type="Script" path="res://scripts/player/collision_detector.gd" id="1_ctsnc"]

[node name="CollisionDetector" type="Node2D"]
script = ExtResource("1_ctsnc")

[node name="UpCollider" type="RayCast2D" parent="."]

[node name="RightCollider" type="RayCast2D" parent="."]

[node name="DownCollider" type="RayCast2D" parent="."]

[node name="LeftCollider" type="RayCast2D" parent="."]
